--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,8 +26,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest black
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Formatting per black
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        black --diff --check .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
