--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,7 +30,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Formatting per black
       run: |
-        # stop the build if there are Python syntax errors or undefined names
+        # Run "black */*.py" before you commit or this will fail.
         black --diff --check .
     - name: Lint with flake8
       run: |
